Fix & test for the bug #2182: lpad returns incorrect result.

mysql-test/r/func_str.result:
  Test for the bug #2182: lpad returns incorrect result
mysql-test/t/func_str.test:
  Test for the bug #2182: lpad returns incorrect result
sql/item_strfunc.cc:
  Fix for the bug #2182: lpad returns incorrect result